<resources>
    <string name="app_name">SmarTrade</string>
    <string name="title_activity_test_botton_nav">testBottonNav</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label1">label1</string>
    <string name="label2">label2</string>
    <string name="menu_search">menu_search</string>
    <string name="menu_settings">menu_settings</string>
    <string name="menu_navigation">menu_navigation</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="enter_ticker">Enter Ticker</string>
    <string name="displays_price">DISPLAYS PRICE</string>
    <string name="get_ticker_price">Get ticker info</string>
    <string name="symb">SYMB: -</string>
    <string name="buy">buy</string>
    <string name="sell">sell</string>
    <string name="welcome_to_smartrade">Welcome to SmarTrade</string>
    <string name="portfolio_value">Portfolio Value</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="trade">Trade</string>
    <string name="logout">Logout</string>
    <string name="position_value">Position Value</string>
    <string name="gain_loss">Gain/Loss</string>
    <string name="cash_balance">Cash Balance</string>
    <string name="textViewPortfolioValue">0.00</string>
    <string name="textviewPositionValue">0.00</string>
    <string name="cashBalance">0.00</string>
    <string name="gainlossD">0.00</string>
    <string name="gainlossP">0.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shares_owned_hint">Shares Owned: -</string>
    <string name="ticker_hint">Ticker: -</string>
    <string name="pending_request_string">Pending</string>
    <string name="title_activity_trade_history">TradeHistoryActivity</string>
    <string name="portfolio">Portfolio:</string>
</resources>